<resources>
    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="login">로그인</string>
    <string name="registor">회원가입</string>
    <string name="use">사용처</string>
    <string name="realmoney">사용금액</string>
    <string name="useday">사용일자</string>
    <string name="memo">적요(메모)</string>
    <string name="guy">계정</string>
    <string name="line">영수증</string>
    <string name="status">상태</string>
    <string name="list">경비관리</string>
    <string name="please">경비신청</string>
    <string name="common_text_confirm">확인</string>
    <string name="common_text_error">오류</string>
</resources>
