<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="200">
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolba_layout"/>
        <ImageView
            android:onClick="toolbarRightButtonClick"
            android:clickable="true"
            android:id="@+id/save"
            android:src="@drawable/save"
            android:padding="10dp"
            android:layout_gravity="right|center_vertical"
            android:layout_width="53dp"
            android:layout_height="53dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="70">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use"
            android:textColor="#18d7c1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="200">

        <EditText
            android:id="@+id/use"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="스타벅스 종로점"
            android:textColorHint="#18d7c1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/realmoney"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="200"
        android:gravity="right">
        <EditText
            android:id="@+id/useMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:inputType="number"
            android:textSize="30dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useday"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/et_PaymentDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="200"
        android:gravity="left">
        <EditText
            android:id="@+id/useDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="2016-07-07"
            android:textSize="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="200"
        android:gravity="left">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="적요"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guy"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="170">
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="500">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="이미지 넣기"/>

</LinearLayout>


</LinearLayout>
